--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+
+        /* you can control opacity of noise  */
+        opacity: 0.05;
+        pointer-events: none;
+        background: url("../assets/images/noise.gif");
+    }
+}
